[package]
name = "fkvs"
description = "Flash Key Value Store"
repository = "https://github.com/ryankurte/rust-fkvs"
tags = [ "embedded", "flash", "key", "value", "store" ]
version = "0.1.0"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
log = "0.4.11"
crc = "1.8.1"
